--- a/packages/i18n/src/messages/en.json
+++ b/packages/i18n/src/messages/en.json
@@ -1,38 +1,38 @@
 {
   "about": {
-    "description": "Hi there! I'm Yuri, a Senior Cloud & Infrastructure Architect with 7+ years of experience in building mission-critical systems. My expertise spans hybrid cloud architectures, Kubernetes orchestration, and large-scale database optimization across financial and enterprise sectors.",
-    "title": "About"
+    "title": "About",
+    "description": "👋 Hi there! I am Yuri Cunha, only a human who loves servers infrastructure."
   },
   "admin": {
     "nav": {
-      "comments": "Lorem Ipsum",
+      "comments": "Comments",
       "dashboard": "Dashboard",
       "general": "General",
       "users": "Users"
     },
     "page-header": {
       "comments": {
-        "description": "Lorem Ipsum",
+        "description": "Manage comments from users",
         "title": "Comments"
       },
       "users": {
-        "description": "Lorem Ipsum",
+        "description": "Manage users of the system",
         "title": "Users"
       }
     },
     "table": {
       "comments": {
-        "body": "Lorem Ipsum",
+        "body": "Body",
         "createdAt": "Created At",
-        "failed-to-fetch-comments-data": "Lorem Ipsum",
-        "filter-body": "Lorem Ipsum",
-        "filter-userId": "Lorem Ipsum",
-        "type": "Lorem Ipsum",
+        "failed-to-fetch-comments-data": "Failed to fetch comments data. Please refresh the page.",
+        "filter-body": "Filter body...",
+        "filter-userId": "Filter user ID...",
+        "type": "Type",
         "userId": "User ID"
       },
       "users": {
         "email": "Email",
-        "failed-to-fetch-users-data": "Lorem Ipsum",
+        "failed-to-fetch-users-data": "Failed to fetch users data. Please refresh the page.",
         "filter-names": "Filter names...",
         "name": "Name",
         "role": "Role"
@@ -41,23 +41,23 @@
   },
   "blog": {
     "comments": {
-      "author": "Lorem Ipsum",
-      "comment-cannot-be-empty": "Lorem Ipsum",
-      "comment-posted": "Lorem Ipsum",
+      "author": "Author",
+      "comment-cannot-be-empty": "Comment cannot be empty",
+      "comment-posted": "Comment posted",
       "comments": "{count, plural, =1 {comment} other {comments}}",
-      "confirm-delete-comment": "Lorem Ipsum",
+      "confirm-delete-comment": "Are you sure you want to delete this comment? This action cannot be undone.",
       "copy-link": "Copy Link",
-      "delete-a-comment": "Lorem Ipsum",
-      "deleted-a-comment": "Lorem Ipsum",
-      "dislike": "Lorem Ipsum",
-      "failed-to-load-comments": "Lorem Ipsum",
-      "failed-to-load-replies": "Lorem Ipsum",
+      "delete-a-comment": "Delete a comment",
+      "deleted-a-comment": "Deleted a comment",
+      "dislike": "Dislike",
+      "failed-to-load-comments": "Failed to load comments. Please refresh the page.",
+      "failed-to-load-replies": "Failed to load replies. Please refresh the page.",
       "like": "Like",
       "link-copied": "Link copied to clipboard",
-      "need-logged-in-to-rate": "Lorem Ipsum",
-      "newest": "Recent",
+      "need-logged-in-to-rate": "You need to be logged in to rate comments",
+      "newest": "Newest",
       "no-comments": "No comments",
-      "oldest": "Old",
+      "oldest": "Oldest",
       "open-menu": "Open menu",
       "placeholder": "Leave a comment",
       "replies": "{count, plural, =1 {reply} other {replies}}",
@@ -65,13 +65,13 @@
       "reply-cannot-be-empty": "Reply cannot be empty",
       "reply-to-comment": "Reply to comment",
       "send-comment": "Send comment",
-      "sort-by": "Sort by...",
+      "sort-by": "Sort by",
       "this-comment-has-been-deleted": "[This comment has been deleted]",
       "toggle-bold": "Toggle bold",
       "toggle-italic": "Toggle italic",
       "toggle-strikethrough": "Toggle strikethrough"
     },
-    "description": "Technical deep dives on cloud-native architectures, infrastructure automation, database scaling strategies or my daily-life.",
+    "description": "My personal website and blog where I share my thoughts on various topics including tutorials, notes, and personal experiences. As a full-stack engineer from Hong Kong, I started learning web development as a hobby in December 2020. I use Next.js for building websites, GitHub for code hosting, and Vercel for deployment. Explore my site to learn more about my Journey and discover some of the web development resources that have inspired me.",
     "footer": {
       "edit-on-github": "Edit on GitHub",
       "last-updated": "Last updated: {date}"
@@ -118,13 +118,13 @@
   },
   "component": {
     "filtered-posts": {
-      "no-posts-found": "No Results :(",
-      "placeholder": "Search"
+      "no-posts-found": "No posts found",
+      "placeholder": "Search articles"
     },
     "go-to-homepage": "Go to homepage"
   },
   "dashboard": {
-    "description": "Lorem Ipsum",
+    "description": "This is my personal dashboard, built with Next.js API routes deployed as serverless functions. I use this dashboard to track various metrics across platforms like YouTube, GitHub, and more.",
     "metric": {
       "blog-total-likes": "Blog Total Likes",
       "blog-total-views": "Blog Total Views",
@@ -153,7 +153,7 @@
       "title": "Delete a comment"
     },
     "delete-message-successfully": "Delete message successfully",
-    "description": "Lorem Ipsum",
+    "description": "Sign my guestbook and share your idea. You can tell me anything here!",
     "failed-to-load-messages": "Failed to load messages. Please refresh the page.",
     "message-cannot-be-empty": "Message cannot be empty",
     "no-messages": "No messages. Be the first to leave a message!",
@@ -173,7 +173,7 @@
       "coding-hours": "Coding hours",
       "connect": "Connect",
       "fav-framework": "Fav. framework",
-      "location": "São Paulo, BR",
+      "location": "Hong Kong",
       "more": "Know more about me",
       "stacks": "Stacks",
       "title": "About Me"
@@ -181,18 +181,18 @@
     "get-in-touch": {
       "description": "Feel free to reach out to me!",
       "image-alt": "Me sit in front of my desk and coding",
-      "title": "Any questions or only some talk?"
+      "title": "Any questions about Next.js?"
     },
     "hero": {
       "amazing": "scalable",
       "attractive": "secure",
       "fantastic": "high-availability",
-      "location-timezone": "Brazil • UTC-3",
-      "stunning": "stunning",
+      "location-timezone": "Brazil • UTC/GMT -3",
+      "stunning": "resilient",
       "title-bottom": "infrastructure",
-      "title-middle-left": "Architecting",
+      "title-middle-left": "architecting",
       "title-middle-right": "cloud systems using",
-      "title-top": "Hi, I'm Yuri!"
+      "title-top": "I'm Yuri, a cloud/server infrastructure specialist"
     },
     "latest-articles": {
       "card": "Article",
@@ -202,7 +202,7 @@
     "selectedProjects": {
       "card": "Project",
       "more": "See all project",
-      "title": "Projects"
+      "title": "Selected Projects"
     }
   },
   "hook": {
@@ -225,7 +225,7 @@
     "now-playing": {
       "error": "Failed to fetch Spotify data",
       "loading": "Loading ...",
-      "not-listening": "Listening now"
+      "not-listening": "Not Listening - Spotify"
     },
     "projects": "Projects",
     "skip-to-main-content": "Skip to main content",
@@ -237,12 +237,12 @@
     "link-to-section": "Link to section"
   },
   "metadata": {
-    "site-description": "Yuri Cunha • 18 y/o • Student • Full Stack Engineer",
-    "site-title": "Yuri Cunha - A Full Stack Engineer"
+    "site-description": "Yuri Cunhaa • 27 y/o • Cloud & Infrastructure Architect",
+    "site-title": "Yuri Cunha - A Senior Cloud & Infrastructure Architect"
   },
   "not-found": "Page Not Found!",
   "projects": {
-    "description": "A quick collection of my projects.",
+    "description": "The list of my projects. Everything was made with ❤️.",
     "title": "Projects",
     "visit-website": "Visit Website"
   },
