--- a/packages/i18n/src/messages/zh-CN.json
+++ b/packages/i18n/src/messages/zh-CN.json
@@ -192,7 +192,7 @@
       "title-bottom": "并使用 React 开发",
       "title-middle-left": "制作",
       "title-middle-right": "的网站",
-      "title-top": "我是 Nelson，一位全端工程师"
+      "title-top": "我是 Yuri，一位全端工程师"
     },
     "latest-articles": {
       "card": "文章",
