--- a/packages/i18n/src/messages/zh-TW.json
+++ b/packages/i18n/src/messages/zh-TW.json
@@ -192,7 +192,7 @@
       "title-bottom": "並使用 React 開發",
       "title-middle-left": "製作",
       "title-middle-right": "的網站",
-      "title-top": "我是 Nelson，一位全端工程師"
+      "title-top": "我是 Yuri，一位全端工程師"
     },
     "latest-articles": {
       "card": "文章",
