fix: wrong links and paths

--- a/apps/web/src/content/projects/zh-CN/links.mdx
+++ b/apps/web/src/content/projects/zh-CN/links.mdx
@@ -1,8 +1,8 @@
 ---
 name: Links
 description: 将我所有的社交媒体连结集中在一个地方
-homepage: https://links.honghong.me
-github: https://github.com/tszhong0411/links
+homepage: https://links.yuricunha.com
+github: https://github.com/isyuricunha/links
 techstack:
   - Typescript
   - Next.js
