--- a/apps/web/src/content/projects/en/links.mdx
+++ b/apps/web/src/content/projects/en/links.mdx
@@ -1,8 +1,8 @@
 ---
 name: Links
 description: All my social media links in one place
-homepage: https://links.honghong.me
-github: https://github.com/tszhong0411/links
+homepage: https://links.yuricunha.com
+github: https://github.com/isyuricunha/links
 techstack:
   - Typescript
   - Next.js
