--- a/apps/web/src/content/projects/zh-TW/links.mdx
+++ b/apps/web/src/content/projects/zh-TW/links.mdx
@@ -1,8 +1,8 @@
 ---
 name: Links
 description: 將我所有的社交媒體連結集中在一個地方
-homepage: https://links.honghong.me
-github: https://github.com/tszhong0411/links
+homepage: https://links.yuricunha.com
+github: https://github.com/isyuricunha/links
 techstack:
   - Typescript
   - Next.js
